recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value lenght
    gauche(lenght)
           ^