recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
if ( steps==0)  { return  }
else {
    avance(length)
    droite(length)
    tree(steps-1,angle,length,shrink)
    gauche(lenght)
    tree(steps-2,angle,length,shrink)
    }
}

